# python-project-lvl1

./: Makefile  README.md  pyproject.toml
.github/workflows/: linter-check.yml
brain_games/: __init__.py  brain_game_even.py  brain_games_engine.py  cli.py  engine.py
brain_games/games/: __init__.py  brain_game_calc.py  brain_game_even.py  brain_game_gcd.py  brain_game_prime.py  brain_game_progression.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
