[tool.poetry]
name = "hexlet-code"
version = "0.7.0"
description = ""
authors = ["Sergey Martynov <acemore@mail.ru>"]
repository = "https://github.com/Acemore/python-project-lvl1"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux"
]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8.1"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
